# sd

asm/: mmap.asm
asm/mos/: Makefile
cpp/: FetchAdd.cpp  MpiHello.c  ParseArgs.cpp  elfparse.c  ptracedb.c  test.c
go/: echo.go  k3s-app.yml  k3sapp_Dockerfile  test  test.go
java/BootJournal/: build.gradle
java/playboot2/: build.gradle
js/angular-hn-test/: .angular-cli.json  README.md  package-lock.json  package.json
js/lm-mart/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
js/local-weather-app/: README.md  package-lock.json  package.json
python/: AeadEchoClientProtocol.py  AeadEchoServerProtocol.py  DomainSocketClient.py  DomainSocketServer.py  IcmpPing.py  IfnameAddress.py  InactiveHost.py  InspectIpv6.py  InterfaceStatus.py  KeyLogger.py  ListInterfaces.py  ParamikoSftp.py  PortForwarder.py  TestFtpThroughProxy.py  TestUrllibUseProxyAndCookies.py  ann_test.ipynb  api_test.py  cnn_test.ipynb  crypto_test.ipynb  exp.txt  fabfile.py  fabfile_pip.py  pcap_test.py  plotlyTest.ipynb  scapy_test.py  win_com_test.py  win_com_test2.py  win_test.py  wx_test.py
python/mysite/: db.sqlite3
python/sdenv/: Pipfile
python/twdp/: db.sqlite3  manage.py
rust/: docker-compose.rabbit-actix.test.build.sh  docker-compose.rabbit-actix.test.yml  ncurses_test  ncurses_test.rs
rust/actix-cache-ws/: Cargo.toml
rust/actix-cache-ws/src/: cache.rs  main.rs  notify.rs  repeater.rs
rust/actix-cache-ws/static/: script.js
rust/auth-test/: Cargo.toml
rust/chat/: Cargo.toml
rust/chat/migrations/2019-05-02-143309_create_channels/: up.sql
rust/chat/migrations/2019-05-02-143333_create_memberships/: down.sql
rust/chat/src/: lib.rs  models.rs
rust/rabbit-actix/: Cargo.toml  Dockerfile_server  Dockerfile_worker  build.rs
rust/rabbit-actix/src/: lib.rs  queue_actor.rs  server.rs  worker.rs
rust/tokio-tls-test/: Cargo.toml  cert.pem  cert.pfx  key.pem
rust/tokio-tls-test/src/: main.rs
(+254 files in other folders)
