[package]
name = "chat"
version = "0.1.0"
authors = ["joe <anjone@126.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.33.0"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2"] }
failure = "0.1.5"
r2d2 = "0.8.4"
serde = "1.0.90"
serde_derive = "1.0.90"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
postgres = "0.15.2"
