[package]
name = "rabbit-actix"
version = "0.1.0"
authors = ["joe"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
chrono = "0.4.6"
env_logger = "0.6.1"
image = "0.21.1"
indexmap = "1.0.2"
failure = "0.1.5"
futures = "0.1.26"
log = "0.4.6"
queens-rock = "0.1.0"
rmp-serde = "0.13.7"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
tokio = "0.1.19"
uuid = "0.7.4"

[dependencies.lapin]
version = "0.15"
package = "lapin-futures"

[[bin]]
name = "rabbit-actix-server"
path = "src/server.rs"
test = false

[[bin]]
name = "rabbit-actix-worker"
path = "src/worker.rs"
test = false

[build-dependencies]
askama = "0.7"